fixed broken button visibility and changed formatting

--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ body {
     background: var(--bg);
 }
 
+h1 {
+  text-align: center;
+}
+
 .list {
   list-style: square;
 }
@@ -31,6 +35,7 @@ body {
 #start-btn:focus { outline-style: none; }
 
 #demo-submit-btn {
+  visibility: hidden;
   position: static;
   height: 50px;
   width: 60px;
@@ -41,7 +46,19 @@ body {
 }
 #demo-submit-btn:focus { outline-style: none; }
 
-.button { text-align: left; }
+#quiz-submit-btn {
+  visibility: hidden;
+  position: static;
+  height: 50px;
+  width: 60px;
+  border-radius: 16px;
+  border: none;
+  color: var(--btnFontColor);
+  background-color: var(--btnBg)
+}
+#quiz-submit-btn:focus { outline-style: none; }
+
+.button { text-align: center; }
 
 #quiz { text-align: left; }
 
